@@ -50,7 +50,8 @@ $site_config['time_date']                = '';
 // 0 = permanent (doesn't expires);
 // 1 - 2591999 (30 days) = relative time, in seconds from now;
 // 2592000 and over = absolute time, unix timestamp
-$site_config['expires']['latestuser']             = 0; // 0 = infinite
+$site_config['expires']['latestuser']             = 3600; // 3600 = 1 hour
+$site_config['expires']['motw']                   = 3600; // 3600 = 1 hour
 $site_config['expires']['MyPeers_']               = 120; // 60 = 60 seconds
 $site_config['expires']['unread']                 = 86400; // 86400 = 1 day
 $site_config['expires']['alerts']                 = 86400; // 86400 = 1 day
@@ -63,10 +64,10 @@ $site_config['expires']['MyPeers_xbt_']           = 30;
 $site_config['expires']['announcement']           = 600; // 600 = 10 min
 $site_config['expires']['forum_posts']            = 86400;
 $site_config['expires']['torrent_comments']       = 900; // 900 = 15 min
-$site_config['expires']['latestposts']            = 86400; // 86400 = 1 day
-$site_config['expires']['top5_torrents']          = 86400; // 86400 = 1 day
-$site_config['expires']['last5_torrents']         = 86400; // 86400 = 1 day
-$site_config['expires']['scroll_torrents']        = 86400; // 86400 = 1 day
+$site_config['expires']['latestposts']            = 300; // 300 = 5 min
+$site_config['expires']['top5_torrents']          = 300; // 300 = 5 min
+$site_config['expires']['last5_torrents']         = 300; // 300 = 5 min
+$site_config['expires']['scroll_torrents']        = 300; // 300 = 5 min
 $site_config['expires']['torrent_details']        = 2591999; // 30 days
 $site_config['expires']['torrent_details_text']   = 2591999; // 30 days
 $site_config['expires']['insertJumpTo']           = 2591999; // 30 days
@@ -91,9 +92,9 @@ $site_config['expires']['user_snatches_data']     = 300; // 300 = 5 min
 $site_config['expires']['staff_snatches_data']    = 300; // 300 = 5 min
 $site_config['expires']['user_snatches_complete'] = 300; // 300 = 5 min
 $site_config['expires']['completed_torrents']     = 300; // 300 = 5 min
-$site_config['expires']['activeusers']            = 60; // 60 = 1 minutes
-$site_config['expires']['forum_users']            = 30; // 60 = 1 minutes
-$site_config['expires']['section_view']           = 30; // 60 = 1 minutes
+$site_config['expires']['activeusers']            = 300; // 300 = 5 min
+$site_config['expires']['forum_users']            = 60; // 60 = 1 minutes
+$site_config['expires']['section_view']           = 60; // 60 = 1 minutes
 $site_config['expires']['child_boards']           = 900; // 60 = 1 minutes
 $site_config['expires']['sv_child_boards']        = 900; // 60 = 1 minutes
 $site_config['expires']['forum_insertJumpTo']     = 3600; // = 1 hour
@@ -101,7 +102,8 @@ $site_config['expires']['last_post']              = 86400; // 86400 = 1 day
 $site_config['expires']['sv_last_post']           = 86400; // 86400 = 1 day
 $site_config['expires']['last_read_post']         = 86400; // 86400 = 1 day
 $site_config['expires']['sv_last_read_post']      = 86400; // 86400 = 1 day
-$site_config['expires']['last24']                 = 3600; // 3600 = 1 hours
+$site_config['expires']['last24']                 = 300; // 300 = 5 min
+$site_config['expires']['latestcomments']         = 300; // 300 = 5 min
 $site_config['expires']['activeircusers']         = 300; // 300 = 5 min
 $site_config['expires']['birthdayusers']          = 43200; // 43200 = 12 hours
 $site_config['expires']['news_users']             = 3600; // 3600 = 1 hours
@@ -112,8 +114,8 @@ $site_config['expires']['invited_by']             = 900; // 900 = 15 min
 $site_config['expires']['user_torrents']          = 900; // 900 = 15 min
 $site_config['expires']['user_seedleech']         = 900; // 900 = 15 min
 $site_config['expires']['radio']                  = 0; // 0 = infinite
-$site_config['expires']['total_funds']            = 0; // 0 = infinite
-$site_config['expires']['latest_news']            = 0; // 0 = infinite
+$site_config['expires']['total_funds']            = 3600; // 3600 = 1 hour
+$site_config['expires']['latest_news']            = 3600; // 3600 = 1 hour
 $site_config['expires']['site_stats']             = 300; // 300 = 5 min
 $site_config['expires']['share_ratio']            = 900; // 900 = 15 min
 $site_config['expires']['share_ratio_xbt']        = 900; // 900 = 15 min
