@@ -110,7 +110,7 @@ UNLOCK TABLES;
 
 LOCK TABLES `cleanup` WRITE;
 /*!40000 ALTER TABLE `cleanup` DISABLE KEYS */;
-INSERT INTO `cleanup` VALUES (4,'Lottery Autoclean','lotteryclean.php',1521331200,86400,1,'Lottery Autoclean - Lottery clean up here every X days',1,'lotteryclean'),(5,'Optimze Db Auto','optimizedb.php',1521417600,259200,1,'Auto Optimize - Runs every 30 days',1,'optimizedb'),(6,'Auto Backup Db','backupdb.php',1521262800,3600,1,'Auto Backup - Runs every 1 hour',1,'backupdb'),(8,'Irc bonus','irc_update.php',1521259200,1800,1,'Irc idle bonus update',1,'irc_update'),(9,'Statistics','sitestats_update.php',1521262800,3600,1,'SIte statistics update',1,'sitestats_update'),(10,'Karma Bonus','karma_update.php',1521259200,1800,1,'Seedbonus award update',1,'karma_update'),(11,'Forums','forum_update.php',1521259200,900,1,'Forum online and count update',1,'forum_update'),(12,'Torrents','torrents_update.php',1521259200,900,1,'Torrents update',1,'torrents_update'),(13,'Normalize','torrents_normalize.php',1521259200,900,1,'File, comment, torrent update',1,'torrents_normalize'),(14,'Ips','ip_update.php',1521331200,86400,1,'Ip clean',1,'ip_update'),(15,'Signups','expired_signup_update.php',1521504000,259200,1,'Expired signups update',1,'expired_signup_update'),(16,'Peers','peer_update.php',1521259200,900,1,'Peers update',1,'peer_update'),(17,'Visible','visible_update.php',1521259200,900,1,'Torrents visible update',1,'visible_update'),(18,'Announcements','announcement_update.php',1521331200,86400,1,'Old announcement updates',1,'announcement_update'),(19,'Readposts','readpost_update.php',1521331200,86400,1,'Old Readposts updates',1,'readpost_update'),(20,'Happyhour','happyhour_update.php',1521244800,43200,1,'HappyHour Updates',0,'happyhour_update'),(21,'Customsmilies','customsmilie_update.php',1521331200,86400,1,'Custom Smilie Update',1,'customsmilie_update'),(22,'Karma Vips','karmavip_update.php',1521331200,86400,1,'Karma VIp Updates',1,'karmavip_update'),(23,'Anonymous Profile','anonymous_update.php',1521331200,86400,1,'Anonymous Profile Updates',1,'anonymous_update'),(24,'Delete Torrents','delete_torrents_update.php',1521331200,86400,1,'Delete Old Torrents Update',1,'delete_torrents_update'),(25,'Funds','funds_update.php',1521331200,86400,1,'Funds And Donation Updates',1,'funds_update'),(26,'Leechwarns','leechwarn_update.php',1521331200,86400,1,'Leechwarnings Update',1,'leechwarn_update'),(27,'Auto Invite','autoinvite_update.php',1521331200,86400,1,'Auto Invite Updates',1,'autoinvite_update'),(28,'Hit And Run','hitrun_update.php',1521262800,3600,1,'Hit And Run Updates',1,'hitrun_update'),(29,'Freeslots Update','freeslot_update.php',1521331200,86400,1,'Freeslots Stuffs Update',1,'freeslot_update'),(30,'Backup Clean','backup_update.php',1521331200,86400,1,'Backups Clean Update',1,'backup_update'),(31,'Inactive Clean','inactive_update.php',1521331200,86400,1,'Inactive Users Update',1,'inactive_update'),(33,'Power User Clean','pu_update.php',1521331200,86400,1,'Power User Clean Updates',1,'pu_update'),(34,'Power User Demote Clean','pu_demote_update.php',1521331200,86400,1,'Power User Demote Clean Updates',1,'pu_demote_update'),(35,'Bugs Clean','bugs_update.php',1522454400,1209600,1,'Bugs Update Clean',1,'bugs_update'),(36,'Sitepot Clean','sitepot_update.php',1521331200,86400,1,'Sitepot Update Clean',1,'sitepot_update'),(37,'Userhits Clean','userhits_update.php',1521331200,86400,1,'Userhits Clean Updates',1,'userhits_update'),(38,'Process Kill','processkill_update.php',1521331200,86400,1,'Mysql Process KIll Updates',1,'processkill_update'),(40,'Pirate Cleanup','pirate_update.php',1521331200,86400,1,'Pirate Stuffs Update',1,'pirate_update'),(41,'King Cleanup','king_update.php',1521331200,86400,1,'King Stuffs Update',1,'king_update'),(42,'Free User Cleanup','freeuser_update.php',1521260400,3900,1,'Free User Stuffs Update',1,'freeuser_update'),(43,'Download Possible Cleanup','downloadpos_update.php',1521331200,86400,1,'Download Possible Stuffs Update',1,'downloadpos_update'),(44,'Upload Possible Cleanup','uploadpos_update.php',1521331200,86400,1,'Upload Possible Stuffs Update',1,'uploadpos_update'),(45,'Free Torrents Cleanup','freetorrents_update.php',1521262800,3600,1,'Free Torrents Stuffs Update',1,'freetorrents_update'),(46,'Chatpost Cleanup','chatpost_update.php',1521331200,86400,1,'Chatpost Stuffs Update',1,'chatpost_update'),(47,'Immunity Cleanup','immunity_update.php',1521331200,86400,1,'Immunity Stuffs Update',1,'immunity_update'),(48,'Warned Cleanup','warned_update.php',1521331200,86400,1,'Warned Stuffs Update',1,'warned_update'),(49,'Games Update','gameaccess_update.php',1521331200,86400,1,'Games Stuffs Updates',1,'gameaccess_update'),(50,'Pm Update','sendpmpos_update.php',1521331200,86400,1,'Pm Stuffs Updates',1,'sendpmpos_update'),(51,'Avatar Update','avatarpos_update.php',1521331200,86400,1,'Avatar Stuffs Updates',1,'avatarpos_update'),(52,'Birthday Pms','birthday_update.php',1521331200,86400,1,'Pm all members with birthdays.',1,'birthday_update'),(53,'Movie of the week','mow_update.php',1521849600,604800,1,'Updates movie of the week',1,'mow_update'),(54,'Silver torrents','silvertorrents_update.php',1521259200,3600,1,'Clean expired silver',1,'silvertorrents_update'),(55,'Failed Logins','failedlogin_update.php',1521331200,86400,1,'Delete expired failed logins',1,'failedlogin_update'),(56,'Christmas Gift Rest','gift_update.php',1521244800,31536000,1,'Reset all users yearly Christmas gift',0,'gift_update'),(58,'Achievements Update','achievement_avatar_update.php',1521331200,86400,1,'Updates user avatar achievements',1,'achievement_avatar_update'),(59,'Achievements Update','achievement_bday_update.php',1521331200,86400,1,'Updates user birthday achievements',1,'achievement_bday_update'),(60,'Achievements Update','achievement_corrupt_update.php',1521331200,86400,1,'Updates user corrupt achievements',1,'achievement_corrupt_update'),(61,'Achievements Update','achievement_fpost_update.php',1521331200,86400,1,'Updates user forum post achievements',1,'achievement_fpost_update'),(62,'Achievements Update','achievement_ftopics_update.php',1521331200,86400,1,'Updates user forum topic achievements',1,'achievement_ftopics_update'),(63,'Achievements Update','achievement_invite_update.php',1521331200,86400,1,'Updates user invite achievements',1,'achievement_invite_update'),(64,'Achievements Update','achievement_karma_update.php',1521331200,86400,1,'Updates user Karma achievements',1,'achievement_karma_update'),(65,'Achievements Update','achievement_request_update.php',1521331200,86400,1,'Updates user request achievements',1,'achievement_request_update'),(66,'Achievements Update','achievement_seedtime_update.php',1521331200,86400,1,'Updates user seedtime achievements',1,'achievement_seedtime_update'),(67,'Achievements Update','achievement_sheep_update.php',1521331200,86400,1,'Updates user sheep achievements',1,'achievement_sheep_update'),(68,'Achievements Update','achievement_shouts_update.php',1521331200,86400,1,'Updates user shout achievements',1,'achievement_shouts_update'),(69,'Achievements Update','achievement_sig_update.php',1521331200,86400,1,'Updates user signature achievements',1,'achievement_sig_update'),(70,'Achievements Update','achievement_sreset_update.php',1521331200,86400,1,'Updates user achievements - Reset shouts',1,'achievement_sreset_update'),(71,'Achievements Update','achievement_sticky_update.php',1521331200,86400,1,'Updates user sticky torrents achievements',1,'achievement_sticky_update'),(72,'Achievements Update','achievement_up_update.php',1521331200,86400,1,'Updates user uploader achievements',1,'achievement_up_update'),(73,'Referrer cleans','referrer_update.php',1521331200,86400,1,'Referrer Autoclean - Removes expired referrer entrys',1,'referrer_update'),(74,'Snatch list admin','snatchclean_update.php',1521244800,86400,1,'Clean old dead data',0,'snatchclean_update'),(76,'Normalize XBT','torrents_normalize_xbt.php',1521244800,900,1,'XBT normalize query updates',0,'torrents_normalize_xbt'),(77,'Delete Torrents XBT','delete_torrents_xbt_update.php',1521244800,86400,1,'Delete torrent xbt update',0,'delete_torrents_xbt_update'),(78,'XBT Torrents','torrents_update_xbt.php',1521244800,900,1,'XBT Torrents update',0,'torrents_update_xbt'),(79,'XBT Peers','peer_update_xbt.php',1521244800,900,1,'XBT Peers update - Not required',0,'peer_update_xbt'),(80,'XBT hit and run system','hitrun_xbt_update.php',1521244800,3600,1,'XBT hit and run detection',0,'hitrun_xbt_update'),(81,'Clean cheater data','cheatclean_update.php',1521331200,86400,1,'Clean abnormal upload speed entrys',1,'cheatclean_update'),(82,'Trivia Cleanup','trivia_update.php',1521320400,300,1,'Trivia Questions Cleanup',1,'trivia_update'),(83,'Trivia Bonus Points','trivia_points_update.php',1521331200,86400,1,'Trivia Bonus Points',1,'trivia_points_update'),(84,'AJAX Chat Cleanup','ajax_chat_cleanup.php',1521259200,3600,1,'Remove autoshouts after they have expired',1,'ajax_chat_cleanup'),(85,'TVMaze Update','tvmaze_update.php',1521331200,86400,1,'Insert New TVMaze IDs',1,'tvmaze_update'),(86,'Remember Me Cleanup','remember_me_cleanup.php',1521331200,86400,1,'Remove Expired Remember Me tokens',1,'remember_me_cleanup'),(87,'PMs Autoclean','messages_cleanup.php',1521331200,86400,1,'PMs Autclean - Delete old, unsaved PMs',1,'pms_cleanup');
+INSERT INTO `cleanup` VALUES (4,'Lottery Autoclean','lotteryclean.php',1521331200,86400,1,'Lottery Autoclean - Lottery clean up here every X days',1,'lotteryclean'),(5,'Optimze Db Auto','optimizedb.php',1521417600,259200,1,'Auto Optimize - Runs every 30 days',1,'optimizedb'),(6,'Auto Backup Db','backupdb.php',1521262800,3600,1,'Auto Backup - Runs every 1 hour',1,'backupdb'),(8,'Irc bonus','irc_update.php',1521259200,1800,1,'Irc idle bonus update',1,'irc_update'),(9,'Statistics','sitestats_update.php',1521262800,300,1,'SIte statistics update',1,'sitestats_update'),(10,'Karma Bonus','karma_update.php',1521259200,1800,1,'Seedbonus award update',1,'karma_update'),(11,'Forums','forum_update.php',1521259200,900,1,'Forum online and count update',1,'forum_update'),(12,'Torrents','torrents_update.php',1521259200,900,1,'Torrents update',1,'torrents_update'),(13,'Normalize','torrents_normalize.php',1521259200,900,1,'File, comment, torrent update',1,'torrents_normalize'),(14,'Ips','ip_update.php',1521331200,86400,1,'Ip clean',1,'ip_update'),(15,'Signups','expired_signup_update.php',1521504000,259200,1,'Expired signups update',1,'expired_signup_update'),(16,'Peers','peer_update.php',1521259200,900,1,'Peers update',1,'peer_update'),(17,'Visible','visible_update.php',1521259200,900,1,'Torrents visible update',1,'visible_update'),(18,'Announcements','announcement_update.php',1521331200,86400,1,'Old announcement updates',1,'announcement_update'),(19,'Readposts','readpost_update.php',1521331200,86400,1,'Old Readposts updates',1,'readpost_update'),(20,'Happyhour','happyhour_update.php',1521244800,43200,1,'HappyHour Updates',0,'happyhour_update'),(21,'Customsmilies','customsmilie_update.php',1521331200,86400,1,'Custom Smilie Update',1,'customsmilie_update'),(22,'Karma Vips','karmavip_update.php',1521331200,86400,1,'Karma VIp Updates',1,'karmavip_update'),(23,'Anonymous Profile','anonymous_update.php',1521331200,86400,1,'Anonymous Profile Updates',1,'anonymous_update'),(24,'Delete Torrents','delete_torrents_update.php',1521331200,86400,1,'Delete Old Torrents Update',1,'delete_torrents_update'),(25,'Funds','funds_update.php',1521331200,86400,1,'Funds And Donation Updates',1,'funds_update'),(26,'Leechwarns','leechwarn_update.php',1521331200,86400,1,'Leechwarnings Update',1,'leechwarn_update'),(27,'Auto Invite','autoinvite_update.php',1521331200,86400,1,'Auto Invite Updates',1,'autoinvite_update'),(28,'Hit And Run','hitrun_update.php',1521262800,3600,1,'Hit And Run Updates',1,'hitrun_update'),(29,'Freeslots Update','freeslot_update.php',1521331200,86400,1,'Freeslots Stuffs Update',1,'freeslot_update'),(30,'Backup Clean','backup_update.php',1521331200,86400,1,'Backups Clean Update',1,'backup_update'),(31,'Inactive Clean','inactive_update.php',1521331200,86400,1,'Inactive Users Update',1,'inactive_update'),(33,'Power User Clean','pu_update.php',1521331200,86400,1,'Power User Clean Updates',1,'pu_update'),(34,'Power User Demote Clean','pu_demote_update.php',1521331200,86400,1,'Power User Demote Clean Updates',1,'pu_demote_update'),(35,'Bugs Clean','bugs_update.php',1522454400,1209600,1,'Bugs Update Clean',1,'bugs_update'),(36,'Sitepot Clean','sitepot_update.php',1521331200,86400,1,'Sitepot Update Clean',1,'sitepot_update'),(37,'Userhits Clean','userhits_update.php',1521331200,86400,1,'Userhits Clean Updates',1,'userhits_update'),(38,'Process Kill','processkill_update.php',1521331200,86400,1,'Mysql Process KIll Updates',1,'processkill_update'),(40,'Pirate Cleanup','pirate_update.php',1521331200,86400,1,'Pirate Stuffs Update',1,'pirate_update'),(41,'King Cleanup','king_update.php',1521331200,86400,1,'King Stuffs Update',1,'king_update'),(42,'Free User Cleanup','freeuser_update.php',1521260400,3900,1,'Free User Stuffs Update',1,'freeuser_update'),(43,'Download Possible Cleanup','downloadpos_update.php',1521331200,86400,1,'Download Possible Stuffs Update',1,'downloadpos_update'),(44,'Upload Possible Cleanup','uploadpos_update.php',1521331200,86400,1,'Upload Possible Stuffs Update',1,'uploadpos_update'),(45,'Free Torrents Cleanup','freetorrents_update.php',1521262800,3600,1,'Free Torrents Stuffs Update',1,'freetorrents_update'),(46,'Chatpost Cleanup','chatpost_update.php',1521331200,86400,1,'Chatpost Stuffs Update',1,'chatpost_update'),(47,'Immunity Cleanup','immunity_update.php',1521331200,86400,1,'Immunity Stuffs Update',1,'immunity_update'),(48,'Warned Cleanup','warned_update.php',1521331200,86400,1,'Warned Stuffs Update',1,'warned_update'),(49,'Games Update','gameaccess_update.php',1521331200,86400,1,'Games Stuffs Updates',1,'gameaccess_update'),(50,'Pm Update','sendpmpos_update.php',1521331200,86400,1,'Pm Stuffs Updates',1,'sendpmpos_update'),(51,'Avatar Update','avatarpos_update.php',1521331200,86400,1,'Avatar Stuffs Updates',1,'avatarpos_update'),(52,'Birthday Pms','birthday_update.php',1521331200,86400,1,'Pm all members with birthdays.',1,'birthday_update'),(53,'Movie of the week','mow_update.php',1521849600,604800,1,'Updates movie of the week',1,'mow_update'),(54,'Silver torrents','silvertorrents_update.php',1521259200,3600,1,'Clean expired silver',1,'silvertorrents_update'),(55,'Failed Logins','failedlogin_update.php',1521331200,86400,1,'Delete expired failed logins',1,'failedlogin_update'),(56,'Christmas Gift Rest','gift_update.php',1521244800,31536000,1,'Reset all users yearly Christmas gift',0,'gift_update'),(58,'Achievements Update','achievement_avatar_update.php',1521331200,86400,1,'Updates user avatar achievements',1,'achievement_avatar_update'),(59,'Achievements Update','achievement_bday_update.php',1521331200,86400,1,'Updates user birthday achievements',1,'achievement_bday_update'),(60,'Achievements Update','achievement_corrupt_update.php',1521331200,86400,1,'Updates user corrupt achievements',1,'achievement_corrupt_update'),(61,'Achievements Update','achievement_fpost_update.php',1521331200,86400,1,'Updates user forum post achievements',1,'achievement_fpost_update'),(62,'Achievements Update','achievement_ftopics_update.php',1521331200,86400,1,'Updates user forum topic achievements',1,'achievement_ftopics_update'),(63,'Achievements Update','achievement_invite_update.php',1521331200,86400,1,'Updates user invite achievements',1,'achievement_invite_update'),(64,'Achievements Update','achievement_karma_update.php',1521331200,86400,1,'Updates user Karma achievements',1,'achievement_karma_update'),(65,'Achievements Update','achievement_request_update.php',1521331200,86400,1,'Updates user request achievements',1,'achievement_request_update'),(66,'Achievements Update','achievement_seedtime_update.php',1521331200,86400,1,'Updates user seedtime achievements',1,'achievement_seedtime_update'),(67,'Achievements Update','achievement_sheep_update.php',1521331200,86400,1,'Updates user sheep achievements',1,'achievement_sheep_update'),(68,'Achievements Update','achievement_shouts_update.php',1521331200,86400,1,'Updates user shout achievements',1,'achievement_shouts_update'),(69,'Achievements Update','achievement_sig_update.php',1521331200,86400,1,'Updates user signature achievements',1,'achievement_sig_update'),(70,'Achievements Update','achievement_sreset_update.php',1521331200,86400,1,'Updates user achievements - Reset shouts',1,'achievement_sreset_update'),(71,'Achievements Update','achievement_sticky_update.php',1521331200,86400,1,'Updates user sticky torrents achievements',1,'achievement_sticky_update'),(72,'Achievements Update','achievement_up_update.php',1521331200,86400,1,'Updates user uploader achievements',1,'achievement_up_update'),(73,'Referrer cleans','referrer_update.php',1521331200,86400,1,'Referrer Autoclean - Removes expired referrer entrys',1,'referrer_update'),(74,'Snatch list admin','snatchclean_update.php',1521244800,86400,1,'Clean old dead data',0,'snatchclean_update'),(76,'Normalize XBT','torrents_normalize_xbt.php',1521244800,900,1,'XBT normalize query updates',0,'torrents_normalize_xbt'),(77,'Delete Torrents XBT','delete_torrents_xbt_update.php',1521244800,86400,1,'Delete torrent xbt update',0,'delete_torrents_xbt_update'),(78,'XBT Torrents','torrents_update_xbt.php',1521244800,900,1,'XBT Torrents update',0,'torrents_update_xbt'),(79,'XBT Peers','peer_update_xbt.php',1521244800,900,1,'XBT Peers update - Not required',0,'peer_update_xbt'),(80,'XBT hit and run system','hitrun_xbt_update.php',1521244800,3600,1,'XBT hit and run detection',0,'hitrun_xbt_update'),(81,'Clean cheater data','cheatclean_update.php',1521331200,86400,1,'Clean abnormal upload speed entrys',1,'cheatclean_update'),(82,'Trivia Cleanup','trivia_update.php',1521320400,300,1,'Trivia Questions Cleanup',1,'trivia_update'),(83,'Trivia Bonus Points','trivia_points_update.php',1521331200,86400,1,'Trivia Bonus Points',1,'trivia_points_update'),(84,'AJAX Chat Cleanup','ajax_chat_cleanup.php',1521259200,3600,1,'Remove autoshouts after they have expired',1,'ajax_chat_cleanup'),(85,'TVMaze Update','tvmaze_update.php',1521331200,86400,1,'Insert New TVMaze IDs',1,'tvmaze_update'),(86,'Remember Me Cleanup','remember_me_cleanup.php',1521331200,86400,1,'Remove Expired Remember Me tokens',1,'remember_me_cleanup'),(87,'PMs Autoclean','messages_cleanup.php',1521331200,86400,1,'PMs Autclean - Delete old, unsaved PMs',1,'pms_cleanup');
 /*!40000 ALTER TABLE `cleanup` ENABLE KEYS */;
 UNLOCK TABLES;
 
